系统UI大改（适配响应式）、music播放器弹出卡顿问题解决、

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,29 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-::selection{
+::selection {
     background: #344449;
     color: #fff;
     text-shadow: none;
 }
-.Cannotbeobtained{
+
+.Cannotbeobtained {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
-img{
+
+img {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
-body,html,#app{
+
+body,
+html,
+#app {
     font-size: 10px;
     margin: 0;
     padding: 0;
 }
-a,li,ui{
+
+a,
+li,
+ui {
     list-style: none;
     text-decoration: none;
 }
