--- a/src/assets/font/font.css
+++ b/src/assets/font/font.css
@@ -7,3 +7,8 @@
   font-family: 'almama';
   src: url('./alibaba/Alimama_ShuHeiTi_Bold.ttf');
 }
+
+@font-face {
+  font-family: 'firaCode';
+  src: url('./FiraCode.ttf');
+}
