--- a/src/assets/font/font.css
+++ b/src/assets/font/font.css
@@ -12,3 +12,7 @@
   font-family: 'firaCode';
   src: url('./FiraCode.ttf');
 }
+@font-face {
+  font-family: 'black-Magic';
+  src: url('./Black-Magic/Black-Magic-2.ttf');
+}
