--- a/src/assets/IconFont/iconfont.css
+++ b/src/assets/IconFont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont";
   /* Project id 3656498 */
-  src: url('iconfont.woff2?t=1664100506629') format('woff2'),
-    url('iconfont.woff?t=1664100506629') format('woff'),
-    url('iconfont.ttf?t=1664100506629') format('truetype');
+  src: url('iconfont.woff2?t=1665806794404') format('woff2'),
+    url('iconfont.woff?t=1665806794404') format('woff'),
+    url('iconfont.ttf?t=1665806794404') format('truetype');
 }
 
 .fa-comment {
@@ -16,6 +16,7 @@
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -26,6 +27,46 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-quanju_fankui:before {
+  content: "\e606";
+}
+
+.icon-quanju_duanxintuisong:before {
+  content: "\e607";
+}
+
+.icon-quanju_kongzhi:before {
+  content: "\e608";
+}
+
+.icon-quanju_yuming:before {
+  content: "\e609";
+}
+
+.icon-quanju_yunying:before {
+  content: "\e60a";
+}
+
+.icon-yonghu_tudi:before {
+  content: "\e60b";
+}
+
+.icon-dingbu_xiugaimima:before {
+  content: "\e60c";
+}
+
+.icon-dingbu_shouye:before {
+  content: "\e60d";
+}
+
+.icon-guanliyuan_guanliyuanrizhi:before {
+  content: "\e60e";
+}
+
+.icon-guanliyuan_jiaoseguanli:before {
+  content: "\e612";
 }
 
 .icon-icon-taikong20:before {
