--- a/src/assets/css/elementLzy.css
+++ b/src/assets/css/elementLzy.css
@@ -60,3 +60,16 @@
 .toolfooter .el-dialog__body {
   padding-top: 0px !important;
 }
+
+.el-table--striped .el-table__body tr.el-table__row--striped td.el-table__cell {
+  background: #5161ce10 !important;
+}
+
+.el-table__body tr.hover-row>td.el-table__cell {
+  background: #5161ce08 !important;
+}
+
+.el-table td.el-table__cell,
+.el-table th.el-table__cell.is-leaf {
+  border: none;
+}
