--- a/src/assets/IconFont/iconfont.css
+++ b/src/assets/IconFont/iconfont.css
@@ -1,14 +1,10 @@
 @font-face {
   font-family: "iconfont";
   /* Project id 3656498 */
-  src: url('iconfont.woff2?t=1665806794404') format('woff2'),
-    url('iconfont.woff?t=1665806794404') format('woff'),
-    url('iconfont.ttf?t=1665806794404') format('truetype');
-}
-
-.fa-comment {
-  width: 50px;
-  height: 50px;
+  src: url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.woff2?t=1667010892131') format('woff2'),
+    url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.woff?t=1667010892131') format('woff'),
+    url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.ttf?t=1667010892131') format('truetype'),
+    url('//at.alicdn.com/t/c/font_3656498_2hogo2zu1iy.svg?t=1667010892131#iconfont') format('svg');
 }
 
 .iconfont {
@@ -16,17 +12,43 @@
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-  font-family: "iconfont" !important;
-  font-size: 16px;
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.icon-text-align-center:before {
+  content: "\e600";
+}
+
+.icon-vote:before {
+  content: "\e601";
+}
+
+.icon-text-align-left:before {
+  content: "\e602";
+}
+
+.icon-text-align-right:before {
+  content: "\e603";
+}
+
+.icon-bg-color:before {
+  content: "\e604";
+}
+
+.icon-riqi:before {
+  content: "\100d9";
+}
+
+.icon-map:before {
+  content: "\e715";
+}
+
+.icon-code:before {
+  content: "\e87e";
+}
+
+.icon-vehicles:before {
+  content: "\e882";
 }
 
 .icon-quanju_fankui:before {
