--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -75,6 +75,16 @@
   overflow: hidden;
 }
 
+.md.hydrated {
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+}
+
+
 /* 修改谷歌浏览器存储密码 自动给input添加样式 */
 input:-webkit-autofill,
 textarea:-webkit-autofill,
@@ -96,4 +106,56 @@ input {
 
 input:-webkit-autofill::selection {
   -webkit-text-fill-color: #fff !important;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgb(245, 245, 245);
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 8px;
+  background-color: rgb(245, 245, 245);
+}
+
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--themeColor) !important;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--themeColor);
+  border-radius: 20px;
+  border: 1px solid rgb(245, 245, 245);
+  transition: 1s all;
+}
+
+.compensate-for-scrollbar {
+  padding: 0 !important;
+}
+
+#app {
+  cursor: var(--normalCup)
+}
+
+#app a {
+  cursor: var(--linkCup)
+}
+
+#app input {
+  cursor: var(--verticalCup)
+}
+
+html,
+body {
+  scroll-behavior: smooth;
+}
+
+html.dark {
+  background-color: var(--darkBgcolor)
+}
+
+#nprogress .bar {
+  background: rgb(255, 0, 119) !important;
 }
