--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,6 +1,6 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 
 
@@ -26,11 +26,10 @@ html,
     padding: 0;
 }
 
-a,
-li,
-ui {
+a {
     list-style: none;
     text-decoration: none;
+    color: var(--themeColor);
 }
 
 .dark {
