--- a/src/assets/css/essay.less
+++ b/src/assets/css/essay.less
@@ -81,120 +81,192 @@ code {
   font-family: 'firaCode' !important;
 }
 
-.vuepress-markdown-body h1 {
-  padding-bottom: 0.3em;
-  font-size: 1.3em;
-  color: #000;
-  font-weight: 600;
-  font-family: 'almama';
-}
-
-.vuepress-markdown-body h2 {
-  padding-bottom: 8px;
-  background: #fff;
-  border-bottom: 1px dashed #ddd;
-  color: #000;
-  position: sticky;
-  top: 0;
-  padding-left: 20px;
-  font-size: 21px;
-  font-weight: 600;
-  font-family: 'almama';
-}
-
-.vuepress-markdown-body h2:after {
-  content: "#";
-  position: absolute;
-  left: 0;
-  color: #FF6D6D;
-}
-
-.vuepress-markdown-body h3 {
-  color: #222;
+.vuepress-markdown-body {
   position: relative;
-  padding-left: 20px;
-  font-size: 18px;
-  font-weight: 600;
+
+  li {
+    list-style: inherit;
+    text-decoration: none;
+  }
+
+  &>div {
+    position: relative;
+  }
+
+
+  &:not(.custom) a:hover {
+    text-decoration: none;
+  }
+
+  h1 {
+    padding-bottom: 0.3em;
+    font-size: 1.3em;
+    color: #000;
+    font-weight: 600;
+    font-family: 'almama';
+  }
+
+  h2 {
+    padding-bottom: 8px;
+    border-bottom: 1px dashed #ddd;
+    color: #000;
+    top: 0;
+    padding-left: 20px;
+    font-size: 21px;
+    font-weight: 600;
+    font-family: 'almama';
+
+    &:after {
+      content: "#";
+      position: absolute;
+      left: 20px;
+      color: #FF6D6D;
+    }
+  }
+
+
+  h3 {
+    color: #222;
+    padding-left: 20px;
+    font-size: 18px;
+    font-weight: 600;
+
+    &:after {
+      content: "⏔";
+      position: absolute;
+      left: 20px;
+      color: var(--themeColor);
+    }
+  }
+
+  h4 {
+    color: #222;
+    position: relative;
+    padding-left: 20px;
+    font-size: 18px;
+    font-weight: 600;
+
+    &:after {
+      content: "~";
+      position: absolute;
+      left: 0;
+      color: var(--themeColor);
+    }
+  }
+
+  & a,
+  & p a code {
+    color: var(--themeColor);
+  }
+
+  a>.v-md-svg-outbound {
+    color: var(--themeColor);
+    vertical-align: text-bottom;
+    display: initial;
+  }
+
+  table {
+    border-collapse: collapse;
+    width: max-content;
+    border-radius: 5px;
+    margin: 0 auto;
+    font-size: 15px;
+  }
+
+  th {
+    color: #fff;
+    padding: 0 8px;
+    text-align: left;
+    background-color: var(--themeColor);
+  }
+
+  td {
+    padding: 0 8px;
+    text-align: left;
+  }
+
+  tr:nth-child(even) {
+    background-color: none;
+  }
+
+  details.details {
+    border-radius: 5px;
+    padding: 10px 20px;
+    background: #21252b;
+    color: #ffff;
+  }
+
+  .scrollbar__thumb {
+    background-color: var(--themeColor) !important;
+  }
+
+  blockquote {
+    margin: 1rem 0;
+    padding: 0.25rem rem 0 0.25rem 1rem;
+    color: #999;
+    font-size: 1rem;
+    border-left: 0.2rem solid var(--themeColor);
+    background: aliceblue;
+  }
 }
 
-.vuepress-markdown-body h3:after {
-  content: "~";
-  position: absolute;
-  left: 0;
-  color: var(--themeColor);
+.dark {
+
+  .vuepress-markdown-body {
+    text-shadow: #21252b;
+    background: var(--darkBgcolor);
+    // box-shadow: 0px 0px 1px 4px #aaa inset;
+    border: none;
+
+    &>div {
+      background: var(--darkBgcolor) !important;
+    }
+
+    a {
+      color: #fff;
+      border-color: #fff;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    p {
+      color: #fff;
+    }
+
+    .v-md-plugin-tip>p,
+    .v-md-plugin-tip summary {
+      color: #fff !important;
+    }
+
+    .v-md-plugin-tip.warning {
+      border-color: #7d7d7d;
+      background-color: #7d7d7d;
+    }
+
+    blockquote {
+      background: transparent;
+      border-color: #fff;
+      color: #fff;
+
+      .v-md-svg-outbound {
+        color: #fff;
+      }
+    }
+
+    .affix-list {
+      .active {
+        color: var(--textcolor);
+      }
+
+      li.active:before {
+        background-color: var(--textcolor);
+      }
+    }
+  }
 }
 
-.vuepress-markdown-body h4 {
-  color: #222;
-  position: relative;
-  padding-left: 20px;
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.vuepress-markdown-body h4:after {
-  content: "~";
-  position: absolute;
-  left: 0;
-  color: var(--themeColor);
-}
-
-.vuepress-markdown-body a {
-  color: var(--themeColor);
-  // border-bottom: 1px solid var(--themeColor);
-}
-
-.vuepress-markdown-body table {
-  border-collapse: collapse;
-  width: 100%;
-  border-radius: 5px;
-  margin: 0 0 1.5em;
-  font-size: 15px;
-}
-
-.vuepress-markdown-body th {
-  color: #fff;
-}
-
-.vuepress-markdown-body th,
-.vuepress-markdown-body td {
-  padding: 0 8px;
-  text-align: left;
-}
-
-.vuepress-markdown-body th {
-  background-color: #FE9600;
-}
-
-.vuepress-markdown-body tr:nth-child(even) {
-  background-color: none;
-}
-
-.vuepress-markdown-body details.details {
-  border-radius: 5px;
-  padding: 10px 20px;
-  background: #21252b;
-  color: #ffff;
-}
-
-/* .dark .vuepress-markdown-body tr:nth-child(even) {
-  background-color: #000;
-} */
-
-.dark .vuepress-markdown-body a {
-  color: var(--textcolor);
-  border-color: var(--textcolor);
-}
-
-.dark .vuepress-markdown-body {
-  text-shadow: #21252b;
-}
-
-.dark .vuepress-markdown-body h2,
-.dark .vuepress-markdown-body h3,
-.dark .vuepress-markdown-body h4 {
-  color: #fff;
-}
 
 .v-md-editor__toolbar-item--active,
 .v-md-editor__toolbar-item--active:hover,
@@ -205,22 +277,13 @@ code {
 
 .v-md-plugin-tip {
   border-radius: 10px;
-  display: flex;
-
-  &>p:nth-child(1) {
-    width: 60px;
-  }
-
-  &>p,
-  summary {
-    color: #222 !important;
-    font-family: 'almama';
-  }
+  // display: flex;
+  font-family: 'almama';
 }
 
 .v-md-plugin-tip.tip {
-  background-color: rgb(200, 255, 230);
-  border-color: rgb(200, 255, 230);
+  background-color: var(--themeColor);
+  border-color: var(--themeColor);
   color: #fff;
 }
 
@@ -247,37 +310,9 @@ code {
   &[open] {
     max-height: 1000px;
   }
-}
 
-.vuepress-markdown-body a,
-.vuepress-markdown-body p a code {
-  color: var(--themeColor);
-}
-
-.vuepress-markdown-body a>.v-md-svg-outbound {
-  color: var(--themeColor);
-  vertical-align: text-bottom;
-  display: initial;
-}
-
-.vuepress-markdown-body:not(.custom) a:hover {
-  text-decoration: none;
-}
-
-.vuepress-markdown-body div[class*=v-md-pre-wrapper-].line-numbers-mode pre {
-  padding-left: 1rem;
-  margin-left: 3.5rem;
-}
-
-.scrollbar__thumb {
-  background-color: var(--themeColor) !important;
-}
-
-.vuepress-markdown-body blockquote {
-  margin: 1rem 0;
-  padding: 0.25rem rem 0 0.25rem 1rem;
-  color: #999;
-  font-size: 1rem;
-  border-left: 0.2rem solid var(--themeColor);
-  background: aliceblue;
+  &>p,
+  summary {
+    color: #fff;
+  }
 }
