更换内容目录ui、修复代码高亮copy、about完善、github贡献图构建

--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -88,3 +88,38 @@
   background-color: var(--themeColor);
   color: #fff;
 }
+
+button.el-button--primary.purple {
+  background-color: var(--themeColor);
+  border-color: var(--themeColor);
+  box-shadow: none;
+
+  &:hover {
+    background-color: #000;
+    border-color: #000;
+    box-shadow: none;
+  }
+}
+
+span.el-tag.purple {
+  background-color: var(--themeColor);
+  border-color: var(--themeColor);
+  box-shadow: none;
+  color: #fff;
+}
+
+.copy-success {
+  background-color: #ebe9ec;
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.25) !important;
+  border-radius: 10px !important;
+  border: 3px solid var(--themeColor) !important;
+
+  .el-notification__content {
+    color: var(--themeColor) !important;
+    font-family: 'almama';
+  }
+
+  .el-icon {
+    display: none;
+  }
+}
