修改github令牌自行撤销问题

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -148,6 +148,10 @@ body::-webkit-scrollbar-track {
   cursor: var(--verticalCup)
 }
 
+#app textarea {
+  cursor: var(--verticalCup)
+}
+
 html,
 body {
   scroll-behavior: smooth;
