去除douyu字体，保留almama

--- a/src/assets/css/admin.less
+++ b/src/assets/css/admin.less
@@ -67,7 +67,7 @@
     line-height: 50px;
     font-weight: 600;
     font-size: 1.5rem;
-    font-family: 'alimama';
+    font-family: 'almama';
 
     img {
       width: 45px;
