--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -155,7 +155,7 @@ body::-webkit-scrollbar-track {
 html,
 body {
   scroll-behavior: smooth;
-  font-family: 'tahoma' !important;
+  font-family: 'firaCode' !important;
 }
 
 html.dark {
