--- a/src/assets/font/font.css
+++ b/src/assets/font/font.css
@@ -7,12 +7,12 @@
 
 @font-face {
   font-family: 'dindin';
-  src: url('./dindinjinbuti/HDMAelvtXQvWYFaJR3JCd.woff');
+  src: url('./dindinjinbuti/DingTalk_JinBuTi_Regular.woff2');
 }
 
 @font-face {
   font-family: 'almama';
-  src: url('./alibaba/Alimama_ShuHeiTi_Bold.woff');
+  src: url('./alibaba/Alimama_ShuHeiTi_Bold.woff2');
 }
 
 
