调整首页内容样式

--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -124,3 +124,12 @@ span.el-tag.purple {
     display: none;
   }
 }
+
+.el-pager li.is-active {
+  color: var(--themeColor) !important;
+}
+
+.el-pagination .btn-next,
+.el-pagination .btn-prev {
+  color: var(--themeColor) !important;
+}
