新增复制提示

--- a/src/assets/css/essay.less
+++ b/src/assets/css/essay.less
@@ -285,8 +285,8 @@ code {
 
 .v-md-plugin-tip.tip {
   background-color: var(--themeColor);
-  border-color: var(--themeColor);
   color: #fff;
+  border: 0.2rem solid black;
 }
 
 .v-md-plugin-tip.warning {
