--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -125,7 +125,7 @@ span.el-tag.purple {
   }
 }
 
-.el-pager li.is-active {
+.lzy-center .el-pager li.is-active {
   color: var(--themeColor) !important;
 }
 
