评论内容以及提示弹窗封装

--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -110,7 +110,7 @@ span.el-tag.purple {
 }
 
 .copy-success {
-  background-color: #ebe9ec;
+  background-color: #ebe9ec !important;
   box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.25) !important;
   border-radius: 10px !important;
   border: 3px solid var(--themeColor) !important;
