--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -273,9 +273,21 @@
         padding: 0;
         border-radius: 0;
 
-        &:before,
         &:after {
           display: none;
+        }
+
+        &:before {
+          content: '恶语伤人六月寒, 良言一句暖三冬意思';
+          font-family: 'dindin';
+          position: absolute;
+          inset: auto auto 10% 50%;
+          transform: translateX(-35%);
+          width: 100%;
+          background-color: transparent;
+          border: none;
+          color: #00000030;
+          pointer-events: none;
         }
 
         &>textarea {
@@ -305,14 +317,66 @@
       }
     }
 
-    &>.nameQQ {
+    &>.nameqq {
       .comment {
         font-family: 'dindin';
-        padding: 30px 10px 0px;
+        padding: 10px 10px 0px;
 
         &::before,
         &::after {
           display: none;
+        }
+
+        div {
+          display: grid;
+          grid-template-columns: 1fr auto 1fr;
+          gap: 0 20px;
+          align-items: center;
+
+          p {
+            width: 96%;
+            height: 50px;
+            overflow-y: hidden;
+            overflow-x: scroll;
+            display: grid;
+            grid-template-columns: repeat(16, 1fr);
+            gap: 0 15px;
+            position: relative;
+            padding-left: 1px;
+
+            &::-webkit-scrollbar {
+              display: none !important;
+            }
+
+            span {
+              width: 45px;
+              height: 45px;
+              border: 1px solid;
+              position: absolute;
+              left: 0.5px;
+              top: 1px;
+              margin: 0;
+              background-color: transparent;
+              border-radius: 50%;
+              border: 2px solid #000;
+              box-shadow: inset 0px 0px 10px 1px var(--themeColor);
+              filter: blur(1px);
+            }
+
+            img {
+              width: 45px;
+              border-radius: 50%;
+            }
+
+          }
+
+          button {
+            font-size: 20px;
+            border: none;
+            height: 30px;
+            background-color: transparent;
+          }
+
         }
 
         p {
@@ -331,6 +395,7 @@
 
             &:focus-visible {
               outline: none;
+              box-shadow: 0px 1px 3px 0px var(--themeColor)
             }
           }
 
