--- a/src/assets/css/admin.less
+++ b/src/assets/css/admin.less
@@ -24,7 +24,8 @@
   }
 
   .content {
-    height: 100%;
+    width: 1280px;
+    height: 860px;
     background-color: #fff;
     border-radius: 0 10px 10px 0;
     position: relative;
@@ -72,19 +73,11 @@
     font-weight: 600;
     font-size: 1.5rem;
     font-family: 'almama';
+    align-items: center;
 
-    img {
-      width: 45px;
-      height: 45.5px;
-      border-radius: 50%;
-      -o-object-fit: cover;
-      padding: 2px;
-      margin-top: 2px;
-      margin-right: 10px;
-      object-fit: cover;
+    .el-avatar--circle {
       border: 1px solid var(--themeColor);
-      overflow: hidden;
-      box-shadow: 0px 0px 3px 1px #888;
+      box-shadow: 0px 0px 3px 1px #888, inset 0px 0px 10px 1px #333;
     }
   }
 
