--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -59,7 +59,7 @@
 }
 
 .toolfooter .el-dialog__body {
-  padding-top: 0px !important;
+  padding: 0px !important;
 }
 
 .el-table--striped .el-table__body tr.el-table__row--striped td.el-table__cell {
@@ -122,7 +122,8 @@ button {
 
       &:hover {
         background-color: #5161ce99;
-        border-color: #000;
+        border: 2px solid #fff;
+
       }
 
       &.is-disabled {
