--- a/src/uiComponents/loader/loading.css
+++ b/src/uiComponents/loader/loading.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+#loadingDiv {
+  transition: .3s;
+}
+
 .outer,
 .middle,
 .inner {
@@ -202,4 +206,19 @@
   left: auto;
   right: 15%;
   animation-delay: .3s;
+}
+
+
+
+@keyframes slide-out-blurred-top {
+  0% {
+    filter: blur(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(-1000px);
+    filter: blur(40px);
+    opacity: 0;
+  }
 }
