--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -59,14 +59,14 @@
 }
 
 .toolfooter .el-dialog__body {
-  padding: 0px !important;
+  padding: 0 !important;
 }
 
 .el-table--striped .el-table__body tr.el-table__row--striped td.el-table__cell {
   background: #5161ce10 !important;
 }
 
-.el-table__body tr.hover-row>td.el-table__cell {
+.el-table__body tr.hover-row > td.el-table__cell {
   background: #5161ce08 !important;
 }
 
@@ -93,9 +93,7 @@
 button {
   &.el-button {
     &.is-disabled {
-      background-color: #5161ce99;
-
-      :hover {
+      background-color:#5161ce99;:hover {
         background-color: #5161ce99 !important;
       }
 
@@ -127,9 +125,7 @@ button {
       }
 
       &.is-disabled {
-        background-color: #5161ce99;
-
-        :hover {
+        background-color:#5161ce99;:hover {
           background-color: #5161ce99 !important;
         }
 
@@ -159,13 +155,10 @@ span.el-tag.purple {
 }
 
 .copy-success {
-  background-color: #ebe9ec !important;
-  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.25) !important;
-  border-radius: 10px !important;
-  border: 3px solid var(--themeColor) !important;
-
+  border: 1px solid var(--themeColor) !important;
+  display: flex;
   .el-notification__content {
-    color: var(--themeColor) !important;
+    // color: var(--themeColor) !important;
     font-family: 'almama';
   }
 
@@ -173,6 +166,7 @@ span.el-tag.purple {
     display: none;
   }
 }
+
 
 .lzy-center .el-pager li.is-active {
   color: var(--themeColor) !important;
