补充天气面板文件、完善页面无网络加载、修复about页面图标不加载 element组件不生效问题

--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -414,7 +414,7 @@
   .affix-container {
     position: absolute;
     top: 495px;
-    right: calc(50% - 554px - 270px);
+    right: calc(50% - 554px - 290px);
     background-color: #fff;
     font-size: 16px;
     z-index: 1;
@@ -425,10 +425,11 @@
     padding-bottom: 10px;
     transition: 1s;
 
+
     .affix {
-      margin-top: 10px;
       position: sticky;
       top: 340px;
+      z-index: 1;
 
       .affix_item {
         border-radius: 10px;
