修复hash路由跳转id时的错误、删除登陆界面、新增同步延时函数

--- a/src/assets/css/essay.less
+++ b/src/assets/css/essay.less
@@ -91,7 +91,7 @@ code {
     }
   }
 
-  &>div {
+  & > div {
     position: relative;
   }
 
@@ -99,7 +99,13 @@ code {
   &:not(.custom) a:hover {
     text-decoration: none;
   }
-
+  h1,
+  h2,
+  h3,
+  h4 {
+    animation-duration: 0.5s;
+    animation-delay: 0.5s;
+  }
   h1 {
     padding-bottom: 0.3em;
     font-size: 1.3em;
@@ -112,48 +118,42 @@ code {
     padding-bottom: 8px;
     border-bottom: 1px dashed #ddd;
     color: #000;
-    top: 0;
-    padding-left: 20px;
     font-size: 21px;
     font-weight: 600;
     font-family: 'almama';
 
-    &:after {
+    &::before {
       content: "#";
-      position: absolute;
-      left: 20px;
       color: #FF6D6D;
+      margin-right: 20px;
     }
   }
 
 
   h3 {
     color: #222;
-    padding-left: 20px;
     font-size: 18px;
     font-weight: 600;
 
-    &:after {
+    &:before {
       content: "⏔";
-      position: absolute;
-      left: 20px;
       color: var(--themeColor);
+      margin-right: 20px;
     }
+
   }
 
   h4 {
     color: #222;
     position: relative;
-    padding-left: 20px;
     font-size: 18px;
     font-weight: 600;
 
-    &:after {
+    &:before {
       content: "~";
-      position: absolute;
-      left: 0;
       color: var(--themeColor);
     }
+
   }
 
   & a,
@@ -161,7 +161,7 @@ code {
     color: var(--themeColor);
   }
 
-  a>.v-md-svg-outbound {
+  a > .v-md-svg-outbound {
     color: var(--themeColor);
     vertical-align: text-bottom;
     display: initial;
@@ -204,7 +204,7 @@ code {
 
   blockquote {
     margin: 1rem 0;
-    padding: 0.25rem rem 0 0.25rem 1rem;
+    padding: 0.25rem rem 0 0.25rem;
     color: #999;
     font-size: 1rem;
     border-left: 0.2rem solid var(--themeColor);
@@ -220,7 +220,7 @@ code {
     // box-shadow: 0px 0px 1px 4px #aaa inset;
     border: none;
 
-    &>div {
+    & > div {
       background: var(--darkBgcolor) !important;
     }
 
@@ -237,7 +237,7 @@ code {
       color: #fff;
     }
 
-    .v-md-plugin-tip>p,
+    .v-md-plugin-tip > p,
     .v-md-plugin-tip summary {
       color: #fff !important;
     }
@@ -304,7 +304,7 @@ code {
   border: 1px solid #000;
   border-radius: 5px;
   padding: 10px;
-  box-shadow: 0 0px 10px 1px rgb(0 0 0 / 10%);
+  box-shadow: 0 0 10px 1px rgb(0 0 0 / 10%);
   transition: 1s;
   max-height: 100px;
   overflow: hidden;
@@ -313,7 +313,7 @@ code {
     max-height: 1000px;
   }
 
-  &>p,
+  & > p,
   summary {
     color: #fff;
   }
