--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -107,6 +107,7 @@ button {
         background-color: var(--themeColor);
         border-color: var(--themeColor);
         box-shadow: none;
+        border: 2px solid transparent;
 
         &:hover {
           background-color: #000;
