--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -192,6 +192,11 @@
 
     h5 {
       margin: 30px 0;
+      .iconfont {
+        color: #000;
+        font-size: 30px;
+
+      }
     }
 
 
@@ -402,7 +407,6 @@
           height: 4px;
           background-color: rgb(245, 245, 245);
         }
-
       }
     }
 
@@ -424,7 +428,7 @@
     // padding-top: 10px;
     padding-bottom: 10px;
     transition: 1s;
-
+    animation-duration: 0.5s;
 
     .affix {
       position: sticky;
