--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -2,6 +2,7 @@
   width: 100%;
   overflow-x: hidden;
   height: auto;
+  padding-bottom: 20px;
   background: rgb(255, 255, 255);
   background-image: linear-gradient(#eee 1px, transparent 0), linear-gradient(90deg, #eee 1px, transparent 0);
   background-size: 28px 28px;
@@ -48,22 +49,6 @@
       white-space: nowrap;
       margin: 0 30px 0 0;
       line-height: 35px;
-
-      .ml-1 {
-        margin-left: 10px;
-      }
-
-      &:deep(.el-tag.el-tag--info) {
-        background-color: crimson;
-        color: #fff;
-        border: 2px solid #000;
-        font-size: 12px;
-        padding: 5px;
-        border-radius: 5px;
-        &:nth-child(1) {
-          margin-left: 0;
-        }
-      }
     }
   }
 
