--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -237,3 +237,16 @@ html.dark {
   padding: 6px;
   font-family: 'dindin';
 }
+
+.mr-1 {
+  margin-right: 10px;
+}
+
+.tags .taglzy {
+  background-color: var(--themeColor);
+  color: #fff;
+  border: 1px solid #000;
+  font-size: 12px;
+  padding: 2px 5px;
+  border-radius: 5px;
+}
