新增开发配置与打包配置、修改所有接口、停止使用阿里妈妈字体、删除不用的静态资源文件、字体文件修改

--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -34,7 +34,7 @@
     overflow: hidden;
     border-radius: 10px;
     // border: 3px solid #000;
-    font-family: 'almama';
+    font-family: 'dindin';
 
     & .boxType {
       // flex: 1;
@@ -84,7 +84,7 @@
   .topTitle h1 {
     font-size: 40px;
     margin-bottom: 20px;
-    font-family: 'almama';
+    font-family: 'dindin';
   }
 
   .topTitle p {
@@ -154,7 +154,7 @@
       text-align: center;
       line-height: 100px;
       font-size: 15px;
-      font-family: 'almama';
+      font-family: 'dindin';
       /* 超出部分显示省略号 */
       overflow: hidden;
       text-overflow: ellipsis;
@@ -402,7 +402,7 @@
 
   .affix-container {
     position: absolute;
-    top: 495px;
+    top: 473px;
     right: calc(50% - 554px - 290px);
     background-color: #fff;
     font-size: 16px;
@@ -454,7 +454,7 @@
           padding: 0 10px;
           list-style: none;
           margin: 0;
-
+          font-family: "dindin";
           & > li.active {
             color: var(--themeColor);
 
