--- a/src/assets/css/elementLzy.less
+++ b/src/assets/css/elementLzy.less
@@ -160,7 +160,7 @@ span.el-tag.purple {
   display: flex;
   .el-notification__content {
     // color: var(--themeColor) !important;
-    font-family: 'almama';
+    font-family: 'dindin';
   }
 
   .el-icon {
