--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -82,7 +82,7 @@ li {
 }
 
 .decoration {
-  font-family: 'almama';
+  font-family: 'dindin';
   color: #fff;
   cursor: var(--linkCup);
   text-shadow: 1px 3px 3px #000;
