--- a/src/assets/css/essay.less
+++ b/src/assets/css/essay.less
@@ -111,7 +111,7 @@ code {
     font-size: 1.3em;
     color: #000;
     font-weight: 600;
-    font-family: 'almama';
+    font-family: 'dindin';
   }
 
   h2 {
@@ -120,7 +120,7 @@ code {
     color: #000;
     font-size: 21px;
     font-weight: 600;
-    font-family: 'almama';
+    font-family: 'dindin';
 
     &::before {
       content: "#";
@@ -280,7 +280,7 @@ code {
 .v-md-plugin-tip {
   border-radius: 10px;
   // display: flex;
-  font-family: 'almama';
+  font-family: 'dindin';
 }
 
 .v-md-plugin-tip.tip {
