修改鼠标右键菜单

--- a/src/assets/css/contentDetail.less
+++ b/src/assets/css/contentDetail.less
@@ -412,7 +412,7 @@
     background-color: transparent;
     // padding-top: 10px;
     padding-bottom: 10px;
-    transition: 1s;
+    transition: .3s;
     animation-duration: 0.5s;
 
     .affix {
