--- a/src/assets/css/essay.less
+++ b/src/assets/css/essay.less
@@ -91,7 +91,7 @@ code {
     }
   }
 
-  & > div {
+  &>div {
     position: relative;
   }
 
@@ -99,6 +99,7 @@ code {
   &:not(.custom) a:hover {
     text-decoration: none;
   }
+
   h1,
   h2,
   h3,
@@ -106,6 +107,7 @@ code {
     animation-duration: 0.5s;
     animation-delay: 0.5s;
   }
+
   h1 {
     padding-bottom: 0.3em;
     font-size: 1.3em;
@@ -161,7 +163,7 @@ code {
     color: var(--themeColor);
   }
 
-  a > .v-md-svg-outbound {
+  a>.v-md-svg-outbound {
     color: var(--themeColor);
     vertical-align: text-bottom;
     display: initial;
@@ -210,6 +212,22 @@ code {
     border-left: 0.2rem solid var(--themeColor);
     background: aliceblue;
   }
+
+  /* 代码类型提示，右上角的 */
+  div[class*=v-md-pre-wrapper-]:before {
+    position: absolute;
+    top: 0em;
+    right: 1em;
+    z-index: 3;
+    color: hsla(0, 0%, 100%, .4);
+    font-size: 1.75rem;
+  }
+
+  .line-number,
+  code,
+  kbd {
+    font-family: 'firaCode' !important;
+  }
 }
 
 .dark {
@@ -220,7 +238,7 @@ code {
     // box-shadow: 0px 0px 1px 4px #aaa inset;
     border: none;
 
-    & > div {
+    &>div {
       background: var(--darkBgcolor) !important;
     }
 
@@ -237,7 +255,7 @@ code {
       color: #fff;
     }
 
-    .v-md-plugin-tip > p,
+    .v-md-plugin-tip>p,
     .v-md-plugin-tip summary {
       color: #fff !important;
     }
@@ -313,7 +331,7 @@ code {
     max-height: 1000px;
   }
 
-  & > p,
+  &>p,
   summary {
     color: #fff;
   }
