--- a/src/assets/css/mobile/navtopMobile.less
+++ b/src/assets/css/mobile/navtopMobile.less
@@ -2,7 +2,7 @@
   .navbarContent {
     .navConChild {
       width: 100%;
-      grid-template-columns: 2fr 2fr 5fr;
+      // grid-template-columns: 2fr 2fr 5fr;
     }
   }
 }
@@ -11,7 +11,7 @@
   .navbarContent {
     .navConChild {
       width: 100%;
-      grid-template-columns: 2fr 0fr 5fr;
+      // grid-template-columns: 2fr 0fr 5fr;
     }
   }
 }
